practice/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "book-20.93.82.137.nip.io"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: productpage
            port:
              number: 9080
  - host: "vote-20.93.82.137.nip.io"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: azure-vote-front
            port:
              number: 80
